# herdr-agents-bridge

./: Cargo.toml  README.md  herdr-plugin.toml
src/: handler.rs  herdr.rs  html.rs  inject.rs  main.rs  pidfile.rs  state.rs  ui.html
