[package]
name = "voice-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
rand = "0.9"
ansi-to-html = "0.2"

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tower = { version = "0.5", features = ["util"] }
